# trading-mania-db

./: .env  Cargo.toml
database/: Cargo.toml
database/src/: conn.rs  forms.rs  lib.rs  mod.rs  models.rs  schema.rs  test_common.rs  types.rs
examples/: new.rs
migration/: Cargo.toml
migration/examples/: new.rs
migration/src/: m20220101_000001_create_table_user.rs  m20260416_153510_create_broker_information_table.rs  m20260416_155923_create_address_table.rs  m20260416_161733_create_trade_table.rs  m20260416_191747_create_tradesession_table.rs  m20260418_173238_create_triggers.rs  util.rs
migration/src/entities/: back_test_data.rs  mod.rs  trade_session.rs  user.rs  user_information.rs
migration/src/models/: mod.rs
src/: lib.rs  m20220101_000001_create_table_user.rs  m20260416_152501_create_user_information_table.rs  m20260416_160724_create_tradesignal_table.rs  m20260416_192431_create_backtestdata_table.rs  main.rs  util.rs
src/entities/: address.rs  backtest_data.rs  broker_information.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  trade.rs  trade_signal.rs  user.rs  user_information.rs
src/models/: error.rs  trade.rs  user.rs
