
[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = "1.0"
tracing = "0.1"
redis = "1.0.3"
dotenvy = "0.15.7"
thiserror = "2.0.18"
rust_decimal = "1.40.0"
tracing-subscriber = "0.3.22"
binary_options_tools = { version = "0.1.9" }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = { version = "1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde", "clock"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
diesel = { version = "2.3.6", features = [
    "uuid",
    "r2d2",
    "postgres",
    "chrono",
    "numeric",
] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}


[dev-dependencies]
fake = "4.4.0"
mockall = "0.14.0"
timebomb = "0.1.2"
test-context = "0.5.4"
criterion = { version = "0.8", features = ["html_reports"] }
